//=====================================================================
//	Revision History for package STL_Extension
//=====================================================================


//---------------------------------------------------------------------
//	actual revision
//---------------------------------------------------------------------

SRC : Changed vector to improve cross platform compilation.
SRC : Added vector class in include/CGAL/vector.h.
TEST: Added vector test program in test/STL_Extension/test_vector.C
ALL : Use Arity_traits also in functional_msvc.
ALL : Small change in In_place_list to please VC7.
ALL : Changed triple, quadruple -> Triple, Quadruple.
ALL : Rejoined Inverse_index fix by Dima.
ALL : Fixed sunpro 5.3 problems.
DOCS: Fixed another triple -> Triple.
DOCS: Added Filter_iterator suggested by Sylvain.
ALL : Added Emptyset_iterator and Oneset_iterator.
ALL : Added triple and quadruple.
SRC : Combined iterators and iterator adaptors into iterator.h.
SRC : Fixed a few more sunpro problems.
SRC : Added copy constructors/assignment for iterators on gcc-2.
SRC : Fixed typename bug for msvc.
SRC : Moved to Kernel_basic.
TEST: Fixed "this" problem on msvc7.
TEST: Fixed Triple/Quadruple test.
TEST: Fixed double -> int conversion warning.

//---------------------------------------------------------------------
//	 CGAL 2.3
//---------------------------------------------------------------------

ALL : New functor adaptors (bind/compose).
ALL : Removed Compose for Projection objects.
ALL : Fixed dumb compiler macro.
ALL : Fixed stlport stuff for msvc.
ALL : Added functional_base to stlport.
ALL : Made In_place_list::allocator non-static for MSVC.
ALL : Added swap adaptor for functors.
ALL : Added Allocators to In_place_list acc. to Lutz.
ALL : Added compose_shared.
ALL : Fixed Arity_traits problem.
ALL : Fixed Inverse_index for buggy gcc-3 map acc. to Eti.
ALL : Changed Iterator_project as Lutz suggested.